deployment/base/pact/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pact-deployment
  labels:
    app: pact-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pact-service
  template:
    metadata:
      labels:
        app: pact-service
    spec:
      containers:
        - name: pact
          image: pactfoundation/pact-broker:2.111.0-pactbroker2.107.1-multi
          ports:
            - containerPort: 8080
              name: http
