deployment/base/pact/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pact-service
spec:
  selector:
    app: pact-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30050
      name: service
